# bookshelf

./: .env  .gitignore  1.py  AGENTS.md  Dockerfile  README.md  _tmp_check.js  alembic.ini  app.json  app.py  auth_utils.py  components.json  compose.learning.yml  config.py  database.txt  design.md  docker-compose.pgvector.yml  eslint.config.js  extensions.py  global.css  index.html  index.web.ts  jest.config.js  jest.setup.ts  middleware.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  react-native-highlighted-text-1.1.2.tgz  requirements.txt  sanar-react-native-highlight-text-1.0.2.tgz  scratch.tsx  test-height.ts  tsconfig.app.json  tsconfig.json  ui.py  vite.config.test.ts  vite.config.ts
.claude/: settings.local.json
.playwright-cli/: page-2026-03-23T05-47-19-631Z.yml  page-2026-03-23T05-47-55-657Z.yml  page-2026-03-23T05-48-28-509Z.yml  page-2026-03-27T14-26-30-543Z.yml  page-2026-03-27T14-27-35-594Z.yml  page-2026-03-27T14-28-12-297Z.yml  page-2026-03-27T14-28-34-172Z.yml  page-2026-03-27T14-28-45-262Z.yml  page-2026-03-27T14-29-02-471Z.yml  page-2026-03-27T14-29-09-522Z.yml  page-2026-03-27T14-29-28-428Z.yml  page-2026-03-27T14-29-43-970Z.yml  page-2026-03-27T14-33-39-362Z.yml
__tests__/: api-client.test.ts  api-hooks.test.tsx  app-icon.test.tsx  app-providers.test.tsx  app-root-layout.test.tsx  app-session-gate.test.tsx  avatar-rendering.test.ts  book-carousel-card.test.tsx  bookleaf-theme.test.tsx  books-route.test.tsx  connection.test.ts  createBookCover.test.ts  floating-bottom-nav.test.tsx  flow-screen-header.test.tsx  glass-buttons.test.tsx  glass-motion.test.ts  glass-surface.test.tsx  glass-tokens.test.ts  goal-progress-card.test.tsx  home-helpers.test.ts  (+30 more)
(+903 files in other folders)
